styling dual viewer

--- a/www/index.html
+++ b/www/index.html
@@ -87,8 +87,7 @@
       <div class="widget"> Pie Chart </div>
     </div>
     <div id="viewerSecondary" class="col-md-4 secondviewer-container">
-      <div class="widget"> 2D Viewer </div>
-      <select id="list2dviews"></select>
+      2D Viewer <select id="list2dviews"></select> 
     </div>
     <div id="barChart" class="col-md-4 bargraph-container">
       <div class="widget"> Bar Chart </div>
