report to reports wording

--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Cancel"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Thanks for using BIM Visual Report App!</h4>
+        <h4 class="modal-title">Thanks for using BIM Visual Reports App!</h4>
       </div>
       <div class="modal-body">
         <p>To view your BIM 360 Docs files on this app please authorize my Forge Client ID with your BIM 360 Docs Account.</p>
@@ -137,7 +137,7 @@
         </div>
         And this App Name:
         <div class="input-group">
-          <input type="text" readonly="true" aria-describedby="CopyAppName" id="AppName" class="form-control" value="BIM Visual Report" />
+          <input type="text" readonly="true" aria-describedby="CopyAppName" id="AppName" class="form-control" value="BIM Visual Reports" />
           <span class="input-group-addon" style="cursor: pointer" data-clipboard-target="#AppName" id="CopyAppName">Copy to clipboard</span>
         </div>
       </div>
