--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
   
   <!-- Autodesk Forge Viewer files -->
   <link rel="stylesheet" href="https://developer.api.autodesk.com/viewingservice/v1/viewers/style.min.css?v=v2.16" type="text/css" />
-  <script src="https://developer.api.autodesk.com/viewingservice/v1/viewers/three.min.js?v=v2.16"></script>
+  <script src="https://developer.api.autodesk.com/viewingservice/v1/viewers/three.min.js"></script>
   <script src="https://developer.api.autodesk.com/viewingservice/v1/viewers/viewer3D.min.js?v=v2.16"></script>
 
   <script src="/js/libraries/d3.min.js"></script>
