visibility hidden at first load

--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
       </div>
       <div class="row" >
         <div id="positionCharts"> 
-          <div class="tab-panel active" id="tab_panel_1">
+          <div class="tab-panel active report-dropdowns" id="tab_panel_1">
             <label for="pu_reportToRun" class="report-dropdowns">Report</label>
               <select id="pu_reportToRun" class="select-light" name="reportToRun" disabled>
               <!-- Options filled in by function in Report_PieChart.js -->
@@ -103,14 +103,14 @@
                 <option value="label-desc">Label - Descending</option>
                 <option value="random">Random</option>
             </select>
-            
+            </div>
             <div class="svgcanvas">
               <div id="pieChart">
               </div>
               <div id="barChart">
               </div>
             </div>
-          </div>
+          
         </div> 
       </div>
 
