media querys still missing small screen and ipad support

--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
 <div class="container-fluid">
       <div class="row data-container">
         <div class="col-sm-3 col-md-2 sidebar " id="dataManagementHubs">
-          <Button class="btn btn-lg btn-default btn-position" style="margin-left:5px" onclick="forgeSignIn()"><img src="img/autodesk_text.png" height="20px"/> Sign in</Button>
+          <Button class="btn btn-lg btn-default" style="margin-left:5px" onclick="forgeSignIn()"><img src="img/autodesk_text.png" height="20px"/> Sign in</Button>
         </div>
       </div>
       <div class="row" >
