fix of UI copy to clipboard

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/jstree.min.js"></script>
   <script src="/js/moment.min.js"></script>
+  <script src="/js/clipboard.min.js"></script>
 
   <!-- Notification ballons -->
   <script src="js/libraries/notify.min.js"></script>
@@ -184,6 +185,9 @@
     </div>
   </div>
 </div>
+<script>
+    new Clipboard('.input-group-addon');
+</script>
 
 <!-- About  -->
 <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
