--- a/www/index.html
+++ b/www/index.html
@@ -117,6 +117,26 @@
 
 </div>
 
+<!-- Testing environment -->
+<div class="modal fade" id="testinEnvWarning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cancel"><span
+                aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Warning!</h4>
+      </div>
+      <div class="modal-body">
+        <p>You are accessing a testing version of this app, which is not recommended.</p>
+        <p>Please <a id="testEnvRedirectPage">go to live version</a> and update your bookmark.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Continue anyway</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- Modal Provision BIM360  -->
 <div class="modal fade" id="provisionAccountModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
