--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
           <span id="infoText" title="About this Autodesk App">About</span></a>
       </li>
       <li>
-        <a href="#" id="BIMconfig" onclick="$('#provisionAccountModal').modal('show');" style="display: none"><span class="glyphicon glyphicon-cog"></span>
+        <a href="#" id="BIMconfig" onclick="$('#provisionAccountModal').modal('show');"><span class="glyphicon glyphicon-cog"></span>
           <span id="helpButtonText" title="Info on setting up BIM credentials">Config</span></a>
       </li>
       <li>
@@ -163,7 +163,8 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" id="provisionAccountSave">Done</button>
       </div>
     </div>
   </div>
