--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
   <script src="js/libraries/notify.min.js"></script>
   
   <!-- Autodesk Forge Viewer files -->
-  <link rel="stylesheet" href="https://developer.api.autodesk.com//modelderivative/v2/viewers/style.min.css" type="text/css" />
+  <link rel="stylesheet" href="https://developer.api.autodesk.com//modelderivative/v2/viewers/style.min.css?v=v6.2" type="text/css" />
   <script src="https://developer.api.autodesk.com//modelderivative/v2/viewers/viewer3D.min.js?v=v6.2"></script>
 
   <script src="/js/libraries/d3.min.js"></script>
