--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <script src="js/ForgeViewer.js"></script>
   <!-- dashboard files -->
   <script src="js/Dashboard/Viewer2d.js"></script>
+  <script src="js/Dashboard/ReportData.js"></script>
   <script src="js/Dashboard/FamilyTypeBarChart.js"></script>
   <script src="js/Dashboard/FamilyTypePieChart.js"></script>
   <script src="js/Dashboard/Main.js"></script>  
