adding new layout and 3 graphs, still cleaning code for tutorial

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <script src="js/Dashboard/ReportData.js"></script>
   <script src="js/Dashboard/FamilyTypeBarChart.js"></script>
   <script src="js/Dashboard/FamilyTypePieChart.js"></script>
+  <script src="js/Dashboard/FamilyTypeLineChart.js"></script>
   <script src="js/Dashboard/Main.js"></script>  
 </head>
 
