clean up of code, added file to managed duplicated functions ready for tutorial steps

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <!-- dashboard files -->
   <script src="js/Dashboard/Viewer2d.js"></script>
   <script src="js/Dashboard/ReportData.js"></script>
+  <script src="js/Dashboard/RunReport.js"></script>
   <script src="js/Dashboard/FamilyTypeBarChart.js"></script>
   <script src="js/Dashboard/FamilyTypePieChart.js"></script>
   <script src="js/Dashboard/FamilyTypeLineChart.js"></script>
