--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,10 @@
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
   <!-- dashboard files -->
-  <script src="js/Dashboard/Viewer2d.js"></script>
-  <script src="js/Dashboard/ReportData.js"></script>
-  <script src="js/Dashboard/RunReport.js"></script>
-  <script src="js/Dashboard/FamilyTypeBarChart.js"></script>
-  <script src="js/Dashboard/FamilyTypePieChart.js"></script>
-  <script src="js/Dashboard/FamilyTypeLineChart.js"></script>
-  <script src="js/Dashboard/Main.js"></script>  
+  <script src="js/Dashboard/Dashboard.js"></script>  
+  <script src="js/Dashboard/DashboardPanel.js"></script>  
+  <script src="js/Dashboard/PanelCategoryChart.js"></script>
+  <script src="js/Dashboard/PanelMaterialChart.js"></script>
 </head>
 
 <body>
