--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   <script src="js/Dashboard/DashboardPanel.js"></script>
   <script src="js/Dashboard/PanelBarChart.js"></script>
   <script src="js/Dashboard/PanelPieChart.js"></script>
+  <!-- 2D Viewer extension (NestedViewer) -->
+  <link rel="stylesheet" href="http://cdn.jsdelivr.net/gh/libvarun/forge-extensions/public/extensions/NestedViewerExtension/contents/main.css">
+  <script src="http://cdn.jsdelivr.net/gh/libvarun/forge-extensions/public/extensions/NestedViewerExtension/contents/main.js"></script>
 </head>
 
 <body>
