--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <script src="js/Dashboard/PanelBarChart.js"></script>
   <script src="js/Dashboard/PanelPieChart.js"></script>
   <!-- 2D Viewer extension (NestedViewer) -->
-  <link rel="stylesheet" href="http://cdn.jsdelivr.net/gh/libvarun/forge-extensions/public/extensions/NestedViewerExtension/contents/main.css">
-  <script src="http://cdn.jsdelivr.net/gh/libvarun/forge-extensions/public/extensions/NestedViewerExtension/contents/main.js"></script>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/libvarun/forge-extensions/public/extensions/NestedViewerExtension/contents/main.css">
+  <script src="//cdn.jsdelivr.net/gh/libvarun/forge-extensions/public/extensions/NestedViewerExtension/contents/main.js"></script>
 </head>
 
 <body>
