add differentiation with ACC project
And modify some wordings with ACC in Readme

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>BIM 360 Visual Reports Sample - Autodesk Forge</title>
+  <title> Visual Reports Sample - Autodesk Forge</title>
   <meta charset="utf-8" />
   <link rel="shortcut icon"
     href="https://github.com/Autodesk-Forge/learn.forge.viewhubmodels/raw/master/img/favicon.ico">
@@ -39,13 +39,13 @@
     <div class="container-fluid">
       <div style="float: left; margin-top: 5px;">
 
-        <img alt="Autodesk Forge" src="/img/bim360.png" height="40"> Visual Reports
+        <img alt="Forge" src="/img/forge.png" height="40"> Visual Reports
       </div>
       </ul>
       <div style="float: right; margin-top: 15px;">
         <span style="padding-right: 5px; cursor: pointer;" data-toggle="modal" data-target="#provisionAccountModal"
-          title="Enable my BIM 360 Account"><span class="glyphicon glyphicon-cog glyphiconTop mlink"> </span> Enable my
-          BIM 360 Account</span>
+          title="Enable my BIM 360 or ACC Account"><span class="glyphicon glyphicon-cog glyphiconTop mlink"> </span> Enable my
+          BIM 360 or ACC Account</span>
       </div>
     </div>
   </nav>
